fix spacing further

--- a/frontend/src/components/css/bpm.scss
+++ b/frontend/src/components/css/bpm.scss
@@ -3,8 +3,8 @@
   width: 500px;
   height: 150px;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .bpmAdjuster {
