--- a/frontend/src/components/css/grid.scss
+++ b/frontend/src/components/css/grid.scss
@@ -576,7 +576,7 @@
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-	height: 50px;
+	height: 100px;
 }
 
 .inputTitle {
